<resources>
    <string name="app_name">Emergency Number</string>

    <!--PREFERENCES-->
    <string name="preferences_DB_name" translatable="false">preferences</string>
    <string name="action_register">REGISTER</string>
    <string name="action_start_begin">LET\'S BEGIN</string>
    <string name="details_messages_history_title">Messages history</string>

    <string name="first_aid_cache_file_path" translatable="false">file:///android_asset/first_aid_website.html</string>
    <string name="gps_not_found_cancel">Cancel</string>
    <string name="gps_not_found_confirm">Go to settings</string>
    <string name="history_details">Details</string>
    <string name="history_empty_hint">History is empty.\n\nHere you can review past reports and conversations with emergency number operators.</string>
    <string name="history_remove_cancel">Cancel</string>
    <string name="history_remove_confirm">Remove</string>
    <string name="other">OTHER</string>
    <string name="category_theft">THEFT</string>
    <string name="category_murder">HOMOCIDE</string>
    <string name="category_vandalism">VANDALISM</string>
    <string name="no_permissions_title">Application will close</string>
    <string name="no_permissions_message">To work properly this application requires additional permissions. You can read them again or leave.</string>
    <string name="no_permissions_close">Leave</string>
    <string name="no_permissions_retry">Read permissions</string>
    <string name="tab_report">Report</string>
    <string name="tab_messages">SMS</string>
    <string name="tab_history">History</string>
    <string name="tab_first_aid">First aid</string>
    <string name="permissions">To continue you need to accept permissions</string>
    <string name="universal_category" translatable="false">universal_category</string>
    <string name="category_main_accident">ACCIDENT</string>
    <string name="category_main_fire">FIRE</string>
    <string name="category_main_theft">THEFT/ROBBERY</string>
    <string name="category_main_injury">INJURY</string>
    <string name="category_main_violence">VIOLENCE</string>
    <string name="category_main_health">HEALTH PROBLEMS</string>
    <string name="category_accident_road">ROAD</string>
    <string name="category_drowning">DROWNING</string>
    <string name="category_electrocution">ELECTROCUTION</string>
    <string name="category_other_emergency">OTHER (EMERGENCY)</string>
    <string name="category_other_police">OTHER (POLICE)</string>
    <string name="category_other_fire_dept">OTHER (FIRE DEPT.)</string>
    <string name="category_building">BUILDING</string>
    <string name="category_chemical">CHEMICAL</string>
    <string name="category_nature">NATURE</string>
    <string name="category_object">OBJECT</string>
    <string name="category_burglary">BURGLARY</string>
    <string name="category_hemorrhage">HEMORRHAGE</string>
    <string name="category_burn">BURN</string>
    <string name="category_body_loss">BODY LOSS</string>
    <string name="category_fracture">FRACTURE</string>
    <string name="category_physical">PHYSICAL</string>
    <string name="category_psychical">PSYCHICAL</string>
    <string name="category_sexual">SEXUAL</string>
    <string name="category_pain">PAIN</string>
    <string name="category_sickness">SICKNESS</string>
    <string name="category_allergy">ALLERGY</string>
    <string name="victim_count_q">Victim count</string>
    <string name="victim_count_among">among victims</string>
    <string name="victim_count_heavily_injured">heavily injured</string>
    <string name="victim_count_unconscious">unconscious</string>
    <string name="victim_count_im_in_danger">I need help</string>
    <string name="victim_count_confirm">confirm</string>
    <string name="location_where">Where are you?</string>
    <string name="location_use_current_location">Use current location</string>
    <string name="location_wrong_address">Invalid address.</string>
    <string name="gps_not_found_title">Do you want to enable location?</string>
    <string name="gps_not_found_message">To let us find your current location you need to enable GPS module.</string>
    <string name="gps_not_found_error_no_location">Location unavailable. Try again or put in an address</string>
    <string name="summary_send">Send report</string>
    <string name="report_send_try">Sending…</string>
    <string name="summary_victims_count">Victims</string>
    <string name="messages_empty_hint">No messages.\n\nOnce you send a report, you will receive answers from the operator of the emergency number (with an option of further communication).</string>
    <string name="message_respond_hint">Write…</string>
    <string name="history_remove_title">Entry will be removed</string>
    <string name="history_remove_message">Do you really want to remove this entry permanently?</string>
    <string name="web_view_error">Error occurred while loading first aid tips.</string>
    <string name="prompt_email">E-mail (optional)</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_emergency_phone">Country\'s emergency phone number</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_invalid_email">Invalid e-mail</string>
    <string name="error_field_required">this field is required</string>
    <string name="error_internet">Error occurred. No internet access.</string>
    <string name="error_unknown">Error occurred. Try again later.</string>
    <string name="error_sending_report">Error occurred. Check emergency phone number in settings and try again later.</string>
    <string name="title_activity_rules">Terms &amp; conditions</string>
    <string name="rules_url">http://google.com</string>
    <string name="rules_not_accepted_error">You need to accept terms and conditions.</string>
    <string name="register_accept_rules">I accept terms &amp; conditions</string>
    <string name="first_aid_url">http://www.redcross.org.uk/What-we-do/First-aid/Everyday-First-Aid/Fast-first-aid-tips</string>
    <string name="category_none" translatable="false">category_none</string>
    <string name="app_logo">App logo</string>
    <string name="send_message_desc">Send message</string>
    <string name="location_use_custom">or put in an address</string>
    <string name="location_address">Address…</string>
    <string name="chat_operator">Operator</string>
    <string name="emergency_number_api_no_country">We couldn\'t establish your position to fetch emergency number. Please enter it yourself.</string>
    <string name="begin_change_number">CHANGE</string>
    <string name="init_update_number_dialog_title">Update emergency number</string>
    <string name="init_update_number_dialog_msg">We\'ve detected that emergency number changed for your area. Do you want to update it from %s to %s?</string>
    <string name="init_update_number_dialog_positive">Update</string>
    <string name="init_update_number_dialog_negative">Dismiss</string>
    <string name="init_update_number_dialog_neutral">Don\'t show anymore</string>
</resources>
