<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/messages_respond_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/horizontal_line" />-->

        <!--android:background="@drawable/respond_input_background"-->

        <FrameLayout
            android:id="@+id/messages_send_button_frame"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp">

            <ImageView
                android:id="@+id/messages_send_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_send"
                android:contentDescription="@string/send_message_desc" />

            <ProgressBar
                android:id="@+id/messages_send_progress"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

        <EditText
            android:id="@+id/messages_respond_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toLeftOf="@id/messages_send_button_frame"
            android:hint="@string/message_respond_hint"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="1"
            android:scrollHorizontally="false"
            android:scrollbars="vertical" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/messages_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/messages_respond_layout"
        android:clipToPadding="false"
        android:divider="@drawable/chat_divider"
        android:listSelector="@android:color/transparent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay"
        android:transcriptMode="alwaysScroll" />

    <TextView
        android:id="@+id/messages_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="48dp"
        android:text="@string/messages_empty_hint"
        android:visibility="gone" />

</RelativeLayout>
